Fixed scroll-hint falling behind navbaron mobile because of adressbar

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
 /* ---- Hero ---- */
 #hero {
     position: relative;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
